--- a/contacts.html
+++ b/contacts.html
@@ -68,8 +68,7 @@
               </div>
               <h3>Обсудить проект</h3>
               <p class="contacts_block_content_left_desc">
-                Заполните форму и мы свяжемся <br>
-                с Вами в ближайшее время
+                Заполните форму и мы свяжемся с Вами в ближайшее время
               </p>
               <div class="contacts_block_content_left_form">
                 <form action="">
